fix footer overlap problem

--- a/drs/static/style.css
+++ b/drs/static/style.css
@@ -32,6 +32,11 @@ html, body {height:100%;}
 	min-height: 100%;
 	margin-bottom: -50px;
 }
+#wrapper:after {
+	content: "";
+	display: block;
+	height: 50px;
+}
 #footer {
 	background: #eee;
 	height: 50px;
